--- a/porfolio/css/style.css
+++ b/porfolio/css/style.css
@@ -1,3 +1,4 @@
+/* #region Defaults */
 html {
   box-sizing: border-box;
   width: 100%;
@@ -47,10 +48,12 @@ body {
   color: #fff;
 }
 
+/* #endregion Defaults */
+
 .header {
-  position: fixed;
-  top: 0;
-  left: 0;
+  /* position: fixed; */
+  /* top: 0; */
+  /* left: 0; */
   width: 100%;
   padding: 20px 10%;
   background: transparent;
@@ -58,6 +61,10 @@ body {
   justify-content: space-between;
   align-items: center;
   z-index: 100;
+}
+
+.header {
+  display: grid;
 }
 
 .logo {
@@ -70,7 +77,7 @@ body {
 }
 
 .navbar a {
-  display: inline-block;
+  /* display: inline-block; */
   font-size: 18px;
   color: #fff;
   text-decoration: none;
@@ -312,7 +319,7 @@ body {
   object-fit: cover;
 }
 
-/* KEYFRAMES ANIMATION */
+/* #region KEYFRAMES ANIMATION */
 
 @keyframes slideTop {
   0% {
@@ -394,3 +401,4 @@ body {
     transform: rotate(360deg);
   }
 }
+/* #endregion KEYFRAMES ANIMATION */
