--- a/porfolio/css/style.css
+++ b/porfolio/css/style.css
@@ -51,9 +51,9 @@ body {
 /* #endregion Defaults */
 
 .header {
-  /* position: fixed; */
-  /* top: 0; */
-  /* left: 0; */
+  position: fixed;
+  top: 0;
+  left: 0;
   width: 100%;
   padding: 20px 10%;
   background: transparent;
@@ -61,10 +61,6 @@ body {
   justify-content: space-between;
   align-items: center;
   z-index: 100;
-}
-
-.header {
-  display: grid;
 }
 
 .logo {
@@ -77,7 +73,7 @@ body {
 }
 
 .navbar a {
-  /* display: inline-block; */
+  display: inline-block;
   font-size: 18px;
   color: #fff;
   text-decoration: none;
@@ -318,6 +314,49 @@ body {
   max-width: 400px;
   object-fit: cover;
 }
+
+/* #region Media Query */
+@media only screen and (max-width:1250px){
+  .header {
+    flex-direction: column;
+    gap: 1rem;
+  }
+
+  .navbar {
+    display: flex;
+    justify-content: center;
+    gap: 2rem;
+  }
+
+  .navbar a {
+    margin-left: unset;
+  }
+
+  .home {
+    flex-direction: column-reverse;
+    justify-content: space-evenly;
+  }
+
+  .home-sci {
+    display: flex;
+    justify-content: center;
+    gap: 1rem;
+  }
+
+  .home-img {
+    margin-top: 2rem;
+    width: 320px;
+    height: 320px;
+  }
+
+  .home-img .glowing-circle::after, 
+  .glowing-circle .image {
+    width: 300px;
+    height: 300px;
+    border-radius: 100vmax;
+  }
+}
+/* #endregion Media Query */
 
 /* #region KEYFRAMES ANIMATION */
 
