--- a/porfolio/css/style.css
+++ b/porfolio/css/style.css
@@ -49,6 +49,9 @@ body {
 }
 /* #endregion Defaults */
 
+
+/* #region Index Page */
+
 .header {
   position: fixed;
   top: 0;
@@ -163,7 +166,7 @@ body {
   filter: blur(5px);
   transition: .5s ease;
 }
- 
+
 .btn:hover::before  {
   background-position: 100% 0;
 }
@@ -206,21 +209,21 @@ body {
   opacity: 0;
   animation: slideBottom 1s ease forwards;
   animation-delay: 1.5s;
-
+  
 }
 
 .home-sci a:nth-child(2) {
   opacity: 0;
   animation: slideRight 1s ease forwards;
   animation-delay: 1.5s;
-
+  
 }
 
 .home-sci a:nth-child(3) {
   opacity: 0;
   animation: slideTop 1s ease forwards;
   animation-delay: 1.5s;
-
+  
 }
 
 .home-sci a::before {
@@ -314,9 +317,207 @@ body {
   width: clamp(17.50rem, calc(14.89rem + 13.04vw), 25.00rem);
   object-fit: cover;
 }
+/* #endregion Index Page */
 
-/* #region Media Query */
-@media only screen and (max-width:1240px){
+
+/* #region About Page */
+about.html {
+  width: 100%;
+  min-height: 100vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: linear-gradient(45deg, #f06, #3cf);
+}
+
+.about_container {
+  width: 100%;
+  padding: 50px 8%;
+}
+
+.imageSection {
+  grid-area: imageSect;
+}
+
+.infoSection{
+  grid-area: infoSect;
+}
+
+.skillSection{
+  grid-area: skillSect;
+}
+
+.about_container .about_content {
+  display: grid;
+  grid-template-columns: 2fr 5fr;
+  grid-gap: 70px;
+  grid-template-areas: "imageSect infoSect"
+                       "skillSect skillSect";
+}
+
+.about_content .imageSection {
+  display: flex;
+  min-width: 300px;
+  height: 380px;
+}
+
+.imageSection img {
+  width: 100%; 
+  height: 100%;
+  object-fit: cover;
+  position: relative;
+  z-index: 2;
+}
+
+.about_content .imageSection::after {
+  position: absolute;
+  content: '';
+  width: 100%;
+  height: 100%;
+  outline: 3px solid #787cb5;
+  top: 15px;
+  left: 15px;
+  z-index: 1;
+}
+
+.infoSection h1 {
+  color: #dedce1;
+  font-size: 30px;
+  font-family: Arial, Helvetica, sans-serif;
+  text-transform: uppercase;
+  display: inline-block;
+  margin-bottom: 5px;
+  position: relative;
+}
+
+.infoSection h1::before {
+  content: '';
+  position: absolute;
+  width: 100%;
+  height: 1px;
+  top: 110%;
+  left: 0;
+  background-color: #aaabb0;
+}
+
+.infoSection h1::after {
+  content: '';
+  position: absolute;
+  width: 40%;
+  height: 3px;
+  top: calc(110% - 1px);
+  left: 0px;  
+  background-color: #787cb5;
+}
+
+.infoSection h2 {
+  font-family: Arial, Helvetica, sans-serif;
+  font-size: 20px;
+  font-weight: 600;
+  color: #787cb5;
+  padding: 14px 0px 15px;
+  text-transform: capitalize;
+  letter-spacing: 1px;
+}
+
+.infoSection p {
+  color: #aaabb9;
+  font-size: 18px;
+  line-height: 1.2;
+  text-align: justify;
+  padding-bottom: 8px;
+}
+
+.personalInfo {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  grid-gap: 10px 20px;
+  margin-top: 14px;
+  padding-bottom: 10px;
+  border-bottom: 1px solid #555;
+}
+
+.personalInfo div {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+}
+
+.personalInfo div span {
+  color: #aaabb0;
+  letter-spacing: 1px;
+}
+
+.infoSection .btn {
+  min-width: 150px;
+  padding: 8px 18px;
+  border: 1px solid #787cb5;
+  border-radius: 25px;
+  font-size: 18px;
+  background-color: #2b2a2f;
+  color: #aaabb0;
+  letter-spacing: 1px;
+  cursor: pointer;
+  transition: all 0.4s;
+  margin-top: 20px;
+}
+
+.infoSection .btn:hover {
+  color: #787cb5;
+  border-color: #aaabb0;
+  cursor: pointer;
+}
+
+.skillSection {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  grid-gap: 10px 80px;
+}
+
+.skillSection .subject {
+  font-size: 17px;
+  font-weight: thin;
+  color: #aaabb6;
+  padding-bottom: 10px;
+  text-transform: uppercase;
+  letter-spacing: 1px;
+}
+
+.progress_bar {
+  width: 100%;
+  height: 16px;
+  background-color: #2b2a2f;
+  padding: 4px 6px;
+  border-top: 1px solid #000;
+  border-bottom: 1px solid #444;
+  border-radius: 15px;
+}
+
+.progress_line {
+  position: relative;
+  width: 100%;
+  height: 100%;
+  background-color: #787cb5;
+  box-shadow: -1px -1px 2px #222222,
+               1px 1px 2px #111111;
+  border-radius: 15px;
+}
+
+.progress_line::after {
+  position: absolute;
+  content: attr(value);
+  top: -35px;
+  right: 0px;
+  transform: translateX(-50%);
+  color: #aaabb0;
+  font-size: 17px;
+}
+
+/* #endregion About Page */
+
+
+
+/* #region Index Media Query */
+@media only screen and (max-width:760px){
   .header {
     flex-direction: column;
     gap: 1rem;
@@ -347,7 +548,34 @@ body {
     margin-top: 2rem;
   }
 }
+
 /* #endregion Media Query */
+
+/* #region About Media Query */
+@media(max-width: 1068px) {
+  .about_container .about_content {
+    grid-template-areas: 'imageSect skillSect'
+                         'infoSect infoSect';
+  }
+  .skillSection {
+    grid-template-columns: 1fr;
+    grid-gap: 20px;
+  }
+}
+@media(max-width: 868px) {
+  .about_container .about_content {
+    grid-template-areas: 'imageSect imageSect'
+                          'infoSect infoSect'
+                          'skillSect skillSect';
+  }
+
+}
+@media (max-width= 668px) {
+  .personalInfo {
+    grid-template-columns: 1fr;
+  }
+}
+/* #endregion About Media Query */
 
 /* #region KEYFRAMES ANIMATION */
 @keyframes slideTop {
