--- a/porfolio/css/style.css
+++ b/porfolio/css/style.css
@@ -53,7 +53,7 @@ body {
 /* #region Index Page */
 
 .header {
-  position: fixed;
+  position: sticky;
   top: 0;
   left: 0;
   width: 100%;
@@ -364,7 +364,7 @@ about.html {
 .imageSection img {
   width: 100%; 
   height: 100%;
-  object-fit: cover;
+  object-fit: contain;
   position: relative;
   z-index: 2;
 }
@@ -372,8 +372,8 @@ about.html {
 .about_content .imageSection::after {
   position: absolute;
   content: '';
-  width: 100%;
-  height: 100%;
+  width: auto;
+  height: auto;
 
   top: 15px;
   left: 15px;
@@ -463,8 +463,8 @@ about.html {
 
 .infoSection .btn-2:hover {
   color: #787cb5;
-  border-color: #aaabb0;
-  cursor: pointer;
+  border-color: linear-gradient(45deg, #f06, #3cf);;
+  cursor: grab;
 }
 
 .skillSection {
