--- a/porfolio/css/style.css
+++ b/porfolio/css/style.css
@@ -333,6 +333,14 @@ about.html {
 .about_container {
   width: 100%;
   padding: 50px 8%;
+  opacity: 0; /* Add initial opacity */
+  transform: translateY(-50px); /* Add initial transform */
+  transition: opacity 0.5s ease, transform 0.5s ease; /* Add transition properties */
+}
+
+.about_container.show {
+  opacity: 1; /* Change opacity to 1 when showing */
+  transform: translateY(0); /* Change transform to 0 when showing */
 }
 
 .imageSection {
@@ -517,7 +525,7 @@ about.html {
 
 
 /* #region Index Media Query */
-@media only screen and (max-width:760px){
+@media only screen and (max-width:1064px){
   .header {
     flex-direction: column;
     gap: 1rem;
@@ -575,6 +583,38 @@ about.html {
     grid-template-columns: 1fr;
   }
 }
+
+/* Media query for screens smaller than 768px */
+@media only screen and (max-width: 768px) {  
+  
+  .about_content {
+    flex-direction: column;
+  }
+  
+  .imageSection,
+  .infoSection,
+  .skillSection {
+    width: 100%;
+  }
+  
+  .personalInfo div {
+    display: block;
+    margin-bottom: 10px;
+  }
+  
+  .button {
+    text-align: center;
+  }
+  
+  .progress_line {
+    animation: none;
+  }
+}
+
+/* CSS code after media query */
+
+
+
 /* #endregion About Media Query */
 
 /* #region KEYFRAMES ANIMATION */
