--- a/porfolio/css/style.css
+++ b/porfolio/css/style.css
@@ -569,6 +569,30 @@ about.html {
 
 /* #endregion About Page */
 
+/* #region Skills Page */
+  .timeline {
+    position: relative;
+    min-width: 1200px;
+    margin: 100px auto;
+  }
+
+  .container {
+    padding: 10px 50px;
+    position: relative;
+    width: 50%;
+    background: rgba(0, 0, 0, 0.3);
+  }
+  .text-box {
+    padding: 20px 30px;
+    color: black;
+    background: #fff;
+    position: relative;
+    border-radius: 6px;
+    font-size: 15px;
+  }
+  
+
+/* #endregion Skills Page */
 
 
 /* #region Index Media Query */
@@ -603,9 +627,17 @@ about.html {
     margin-top: 2rem;
   }
 }
+
 @media (max-width: 767px) {
   .home-content h3 {
     font-size: 27px;
+  }
+}
+
+@media (max-width: 400px) {
+  .home-content h3 {
+    font-size: 23px;
+    margin-top: 18px;
   }
 }
 
