--- a/porfolio/css/style.css
+++ b/porfolio/css/style.css
@@ -641,6 +641,14 @@ about.html {
   }
 }
 
+/* Portrait mode */
+@media only screen and (min-device-width: 428px) and (max-device-width: 414px) and (orientation: portrait) {
+  .home-content h3 {
+    font-size: 23px;
+    margin-top: 18px;
+}
+
+
 /* #endregion Media Query */
 
 /* #region About Media Query */
